--- a/index.html
+++ b/index.html
@@ -18,10 +18,31 @@
     <p>Bachelor of Computer Science, Sacramento State University(Work in progress)</p>
     <p>Full Stack developer certification, UDEMY/AppBrewery(Work in progress)</p>
     <hr>
-    <h2>Jobs I have done</h2>
-    <ul>
-        <li><h3>Mcdonalds Staff</h3></li>
+        <h2>Jobs I have done</h2>
+         <ul>
+          <li><h3>Mcdonalds Staff</h3></li>
+        </ul>
+            <p style="margin-left: 40px;">June 2021-December 2021</p>
+             <ul style="margin-left: 40px;">
+                <li>Working in a fast pace enviroment </li>
+                <li>Coustoer service</li>
+                <li>Food service</li>
     </ul>
-    <p style="margin-left: 40px;">June 2021-December 2021</p>
+    <ul>
+        <li><h3>Raleys</h3></li>
+    </ul>
+    <p style="margin-left: 40px;">September 2023- Current day</p>
+      <ul style="margin-left: 40px">
+            <li>Customer servie</li>
+            <li>Fast enviroment</li>
+            <li>Schedule management</li>
+        </ul>
+    <hr>
+    <h2>Current projects</h2>
+    <a href="https://rohanl1212.github.io/AAA/"> Udemy Projects</a>
+    <hr>
+    <h2> Contact Me</h2>
+    <p>+1 9163974415</p>
+    <P>Email : lal.rohan1212@gmail.com</P>
 </body>
 </html>
