--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
     <h2> Contact Me</h2>
     <p>+1 9163974415</p>
     <P>Email : lal.rohan1212@gmail.com</P>
+
+    <footer>
+        <p style="font-size: small;">@2025 Lal</p>
+    </footer>
 </body>
 </html>
